--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "author": "Rupesh Kumar Raushan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
